--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,61 @@
-// Specific CSS for your home-page
+.centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #1F1F1F;
+  color: white;
+  padding-left: 37px;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+
+  h1 {
+    font-size: 32px;
+    margin: 0 0 8px;
+    font-weight: bold;
+  }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 8px;
+  }
+
+  .btn {
+    margin: 0 0px;
+  }
+
+  .button-text {
+    text-align: center;
+  }
+  .btn-primary {
+    padding: 16px 12px;
+    align-self: flex-start;
+    font-size: 24px;
+    font-weight: bold;
+    border-radius: 16px;
+    background: linear-gradient(to bottom, #A301FC, #7541FF);
+    border: 0;
+  }
+
+  .btn-secondary{
+    padding: 16px;
+    color: black;
+    background-color: white;
+    border-radius: 16px;
+    margin-top: 140px;
+    margin-right: 16px;
+  }
+  .btn-secondary i{
+    font-size: 32px;
+  }
+
+  a, a:hover{
+    color: inherit;
+    text-decoration: none;
+  }
+}
