--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,6 +3,8 @@
 <%= @profile.age %>
 <%= @profile.location %>
 <%= @profile.pronouns %>
+<%= @languages %>
+<%= cl_image_tag photo.key, height: 100, width: 100, crop: :fill %>
 
 <%= link_to "home", root_path %>
 
