cloudinary included in profile view correctly

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,7 +4,9 @@
 <%= @profile.location %>
 <%= @profile.pronouns %>
 <%= @languages %>
-<%= cl_image_tag photo.key, height: 100, width: 100, crop: :fill %>
+<% @profile.photos.each do |photo| %>
+  <%= cl_image_tag photo.key, height: 100, width: 100, crop: :fill %>
+<% end %>
 
 <%= link_to "home", root_path %>
 
