--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,10 +1,11 @@
 <h3>edit profile here</h3>
+
 <%= simple_form_for @profile do |f| %>
   <%= f.input :name %>
   <%= f.input :age %>
   <%= f.input :location %>
   <%= f.input :pronouns %>
-  <%= f.input :selected_languages %>
+  <%= f.input :languages, collection: Language.all.pluck(:language), input_html: {multiple: true, data: {controller: "tom-select"} }, include_hidden: false %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.submit %>
 <% end %>
