--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -5,7 +5,9 @@
   <%= f.input :age %>
   <%= f.input :location %>
   <%= f.input :pronouns %>
+  <%= f.input :bio %>
   <%= f.submit %>
+
 <% end %>
 
 <%= link_to "Home", root_path %>
