--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,9 +1,16 @@
-<h3>here you can see your profile deets</h3>
-<%= @profile.name %>
-<%= @profile.age %>
-<%= @profile.location %>
-<%= @profile.pronouns %>
 
-<%= link_to "home", root_path %>
+<div class="banner">
+<div class="profile-picture"></div>
+</div>
 
-<%= link_to "delete profile", delete_profile_path(@profile), data: { turbo_method: :delete, turbo_confirm: "Sure you want to delete your profile?" } %>
+</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <h3>@<%= @profile.name %></h3>
+        <p class="pronouns"><%= @profile.pronouns %></p>
+        <p class="birthday location"><i class="fa-solid fa-location-dot"></i><%= @profile.location %> &nbsp; &nbsp; <i class="fa-solid fa-cake-candles"></i> <%= @profile.age %></p>
+        <p><%= @profile.bio %></p>
+      </div>
+    </div>
+</div>
