completed search for spotify-api frontandback

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,7 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "profile";
+@import "artists";
 html{
   font-family: "Inter", sans-serif;
   background-color: #1F1F1F;
