--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,23 +1,25 @@
-.centered {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100vh;
-  background-color: #1F1F1F;
-  color: white;
-  padding-left: 37px;
-  box-sizing: border-box;
-  font-family: "Inter", sans-serif;
+.home{
+  .home-centered {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #1F1F1F;
+    color: white;
+    padding-left: 37px;
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif;
+  }
 
-  h1 {
+  .home-centered h1 {
     font-size: 32px;
     margin: 0 0 8px;
     font-weight: bold;
   }
 
-  .button-container {
+  .home-button-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,14 +27,15 @@
     margin-bottom: 8px;
   }
 
-  .btn {
+  .home-btn {
     margin: 0 0px;
   }
 
-  .button-text {
+  .home-button-text {
     text-align: center;
   }
-  .btn-primary {
+
+  .home-btn-primary {
     padding: 16px 12px;
     align-self: flex-start;
     font-size: 24px;
@@ -40,9 +43,11 @@
     border-radius: 16px;
     background: linear-gradient(to bottom, #A301FC, #7541FF);
     border: 0;
+    width: fit-content;
+
   }
 
-  .btn-secondary{
+  .home-btn-secondary {
     padding: 16px;
     color: black;
     background-color: white;
@@ -50,12 +55,24 @@
     margin-top: 140px;
     margin-right: 16px;
   }
-  .btn-secondary i{
+
+  .home-btn-secondary i {
     font-size: 32px;
   }
 
-  a, a:hover{
+  .home-sign-in-text a,
+  .home-sign-in-text a:hover {
     color: inherit;
     text-decoration: none;
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
+    margin-top: 8px;
+  }
+
+  button{
+    border: none;
   }
 }
