more links added to right pages

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,6 +19,7 @@
 
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
+    <%= link_to "Go", matches_path %>
   </div>
 <% end %>
 
