--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -8,8 +8,7 @@
   <%= f.input :bio %>
   <%= f.input :language_ids, collection: Language.all, label_method: :language, value_method: :id, input_html: { multiple: true, data: {controller: "tom-select"} }, include_hidden: false %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-  <%= f.submit %>
-
+  <%= f.button :submit, "Go!" %>
 <% end %>
 
 <%= link_to "Home", root_path %>
