--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -13,3 +13,5 @@ and one button for no which links to: profile_matches_path
 i think should work as the controller then handles whether match is made or not?? %>
 <%# if swipe yes, either does matches controller create and/or show, if swipe no,
 should still create new record in matches controller but no show or option to go to chat %>
+
+<%= link_to "My Profile", profile_path(@profile) %>
