--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="signup">
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -15,11 +16,28 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :bio,
+                required: true,
+                autofocus: true %>
+    <%= f.input :age,
+                required: true,
+                autofocus: true %>
+    <%= f.input :location,
+                required: true,
+                autofocus: true %>
+   <%= f.input  :pronouns,
+                required: true,
+                autofocus: true %>
+   <%= f.input  :photo,
+                required: true,
+                as: :file,
+                autofocus: true %>
   </div>
-
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
