--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="custom-navbar">
-  <%= link_to swiper_i, class: "nav-item" do %>
+  <%= link_to swiper_index_path, class: "nav-item" do %>
     <i class="fa-solid fa-house"></i>
   <% end %>
   <%= link_to matches_path, class: "nav-item" do %>
