homepage button fix not going to right place when logged in

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,8 @@
     <div>
       <h1>Find Your Gig Buddy Today</h1>
       <% if current_user %>
-      
+      <%= link_to "Get Started", swiper_index_path, class: "home-btn home-btn-primary home-btn-get-started d-block", id: "home-getstartedbtn" %>
+      <% else %>
       <%= link_to "Get Started", new_user_registration_path, class: "home-btn home-btn-primary home-btn-get-started d-block", id: "home-getstartedbtn" %>
       <% end %>
     </div>
