--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -41,4 +41,4 @@
     document.getElementById('search-form').submit();
   }
 </script>
-<%= link_to "Back", profile_path(@profile) %>
+<%# <%= link_to "Back", profile_path(@profile) %>
