--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <div>
       <h1>Find Your Gig Buddy Today</h1>
       <% if current_user %>
-      
+
       <%= link_to "Get Started", new_user_registration_path, class: "home-btn home-btn-primary home-btn-get-started d-block", id: "home-getstartedbtn" %>
       <% end %>
     </div>
@@ -19,3 +19,5 @@
     <div class="home-sign-in-text">
       <p>Already have an account? <strong><%= link_to "Sign in", new_user_session_path %></strong></p>
     </div>
+  </div>
+  </div>
