pundit completed and working locally within branch without issue

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Back", profile_path(@profile) %>
 <div class="container d-flex justify-content-center align-items-center vh-100">
   <div class="card custom-card">
     <div class="card-body d-flex flex-column justify-content-center">
@@ -41,4 +42,3 @@
     document.getElementById('search-form').submit();
   }
 </script>
-<%# <%= link_to "Back", profile_path(@profile) %>
