--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,5 @@
 <div id="message" <%= message.id %>>
+  <i><%= message.user.profile.name %></i>
   <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
   <p><%= message.content %></p>
 </div>
