--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,7 +4,7 @@
 <% @profile.photos.each do |photo| %>
   <%= cl_image_tag photo.key, height: 100, width: 100, crop: :fill %>
 <% end %>
-<%= link_to "View my artists", artists_index_path %>
+<%= link_to "View my artists", artists_path %>
 <%# <%= link_to "Edit profile", edit_profile_path(@profile) %>
 <%# <%= link_to "Delete my profile", delete_profile_path(@profile) %>
 
