--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,13 +5,7 @@
   <%= link_to matches_path, class: "nav-item" do %>
     <i class="fa-regular fa-envelope"></i>
   <% end %>
-  <% if @profile.present? %>
-    <%= link_to profile_path(@profile), class: "nav-item" do %>
+  <%= link_to profile_path(current_user.profile), class: "nav-item" do %>
       <i class="fa-regular fa-user"></i>
-    <% end %>
-  <% else %>
-    <%= link_to new_user_session_path, class: "nav-item" do %>
-      <i class="fa-regular fa-user"></i>
-    <% end %>
   <% end %>
 </div>
