gemfile lock conflict fixed

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Home", root_path %>
+<%= link_to "Back", _path %>
 
 <div class="container match"
       data-controller="match-subscription"
