changes link to home to a link back to swiper

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Back", _path %>
+<%= link_to "Back", swiper_index_path %>
 
 <div class="container match"
       data-controller="match-subscription"
