--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -2,23 +2,29 @@
 
 <div class="container match"
       data-controller="match-subscription"
-      data-match-subscription-match-id-value="<%=@match.id %>"
+      data-match-subscription-match-id-value="<%= @match.id %>"
+      data-match-subscription-current-user-id-value="<%= current_user.id %>"
 >
 
-  <h1>Chat with <%= @match_profile.name %></h1>
+  <h1>Chat with <%= @match_profile.name.capitalize %></h1>
 
   <div class="messages" data-match-subscription-target="messages">
-
     <% @match.messages.each do |message| %>
-      <%= render "messages/message", message: message %>
+      <div class="message-row d-flex <%= message.sender?(current_user) ? 'justify-content-end' :
+      'justify-content-start' %>">
+        <div class="<%=message.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
+          <%= render "messages/message", message: message %>
+        </div>
+      </div>
     <% end %>
   </div>
 
-    <%= simple_form_for [@match, @message], html: { data: { action: "turbo:submit-end->match-subscription#resetForm" } } do |f| %>
+    <%= simple_form_for [@match, @message], html: { data: { action: "turbo:submit-end->match-subscription#resetForm" }, class: "d-flex" } do |f| %>
       <%= f.input :content,
           label: false,
-          placeholder: "Send a message..."
+          placeholder: "Send a message...",
+          wrapper_html: {class: "flex-grow-1"}
       %>
-      <%= f.submit "Send" %>
+      <%= f.submit "Send", class: "btn btn-primary mb-3" %>
     <% end %>
 </div>
