--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -9,14 +9,18 @@
   width: 70%;
   max-width: 400px;
   border-radius: 4px;
+  border-bottom-right-radius: 0;
   padding: 8px;
-  min-height: 80px;
+  min-height: 60px;
 }
 
 .sender-style {
-  background-color: lightcoral;
+  background-color: #A301FC;
+  opacity: 75%;
 }
 
 .receiver-style {
-  background-color: lightblue;
+  background-color: #7541FF;
+  opacity: 75%;
 }
+
