--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,12 @@
     <link href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.css" rel="stylesheet">
   </head>
 
-  <body>
-    <% unless params[:controller] == "pages" && params[:action] == "home" %>
-      <%= render "shared/navbar" %>
-    <% end %>
-    <%= render "shared/flashes" %>
+<body>
+  <% unless params[:controller] == "pages" && params[:action] == "home" || params[:controller] == "matches" %>
+    <%= render "shared/navbar" %>
+  <% end %>
+  <%= render "shared/flashes" %>
 
-    <%= yield %>
-  </body>
+  <%= yield %>
+</body>
 </html>
