--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,30 +1,36 @@
-<%= link_to "Back", swiper_index_path %>
+<div class="header">
+  <div class="back">
+    <%= link_to swiper_index_path do %>
+      <i class="fa-solid fa-chevron-left"></i>
+    <% end %>
+  </div>
+  <h1><%= @match_profile.name.capitalize %></h1>
+</div>
 
 <div class="container match"
-      data-controller="match-subscription"
-      data-match-subscription-match-id-value="<%= @match.id %>"
-      data-match-subscription-current-user-id-value="<%= current_user.id %>"
+  data-controller="match-subscription"
+  data-match-subscription-match-id-value="<%= @match.id %>"
+  data-match-subscription-current-user-id-value="<%= current_user.id %>"
 >
-
-  <h1>Chat with <%= @match_profile.name.capitalize %></h1>
-
   <div class="messages" data-match-subscription-target="messages">
     <% @match.messages.each do |message| %>
-      <div class="message-row d-flex <%= message.sender?(current_user) ? 'justify-content-end' :
-      'justify-content-start' %>">
-        <div class="<%=message.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
+      <div class="message-row d-flex <%= message.sender?(current_user) ? 'justify-content-end' : 'justify-content-start' %>">
+        <div class="<%= message.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
           <%= render "messages/message", message: message %>
+          <div class="message-info">
+            <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
+          </div>
         </div>
       </div>
     <% end %>
   </div>
 
-    <%= simple_form_for [@match, @message], html: { data: { action: "turbo:submit-end->match-subscription#resetForm" }, class: "d-flex" } do |f| %>
-      <%= f.input :content,
-          label: false,
-          placeholder: "Send a message...",
-          wrapper_html: {class: "flex-grow-1"}
-      %>
-      <%= f.submit "Send", class: "btn btn-primary mb-3" %>
-    <% end %>
-</div>
+<%= simple_form_for [@match, @message], html: { data: { action: "turbo:submit-end->match-subscription#resetForm" }, class: "d-flex" } do |f| %>
+  <%= f.input :content,
+      label: false,
+      placeholder: "Send a message...",
+      wrapper_html: {class: "flex-grow-1"},
+      input_html: { style: "background-color: #303030; color: white; border: none; outline: none;" }
+  %>
+  <%= f.submit "Send", class: "btn btn-primary mb-3 gradient-button" %>
+<% end %>
