--- a/app/views/swiper/index.html.erb
+++ b/app/views/swiper/index.html.erb
@@ -10,16 +10,20 @@
           <% end %>
         </div>
         <!-- Profile card content here -->
-        <div class="profile-name">
-          <%= profile.name %>
-        </div>
-        <div class="profile-details">
-          <p>Age: <%= profile.age %></p>
-          <p>Location: <%= profile.location %></p>
-          <p>Pronouns: <%= profile.pronouns %></p>
-        </div>
-        <div class="profile-photo">
-          <img src="<%= profile.photos.first %>" alt="Profile Photo">
+
+        <div class="card">
+          <% if profile.photos.present? %>
+            <div class="profile-photo">
+              <img src="<%= profile.photos.first %>" alt="Profile Photo">
+            </div>
+          <% else %>
+            <div class="profile-photo"></div>
+          <% end %>
+          <div class="username"><%= profile.name %></div>
+          <div class="pronouns"><%= profile.pronouns %></div>
+          <div class="profile-details">
+            <p class="age location"><i class="fa-solid fa-cake-candles"></i> <%= profile.age %> &nbsp; &nbsp; <i class="fa-solid fa-location-dot"></i> <%= profile.location.capitalize %></p>
+          </div>
         </div>
       </div>
     <% end %>
