--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .custom-navbar {
   position: fixed;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
   background-color: rgba(255, 255, 255, 0);
   display: flex;
   justify-content: center;
