--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -19,7 +19,7 @@
 
 <div class="banner">
 <div class="profile-picture">
-<%= profile.photos.first %>
+<%= @profile.photos.first %>
 </div>
 </div>
 
