--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,10 +16,10 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
-   <%= f.input  :photo,
-                required: true,
-                as: :file,
-                autofocus: true %>
+   <%# <%= f.input  :photo, %>
+                <%# required: true, %>
+                <%# as: :file, %>
+                <%# autofocus: true %>
   </div>
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
