--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <% unless params[:controller] == "pages" && params[:action] == "home" %>
+    <% unless params[:controller] == "pages" && params[:action] == "home" || params[:controller] == "devise/sessions" || params[:controller] == "devise/registrations" || params[:controller] == "profiles" %>
       <%= render "shared/navbar" %>
     <% end %>
     <%= render "shared/flashes" %>
