fixed small oopsie

--- a/app/views/swiper/index.html.erb
+++ b/app/views/swiper/index.html.erb
@@ -11,7 +11,7 @@
         </div>
         <!-- Profile card content here -->
 
-        <div class="card artists-card">
+        <div class="card">
           <% if profile.photos.present? %>
             <div class="profile-photo">
               <img src="<%= profile.photos.first %>" alt="Profile Photo">
