--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,5 +16,5 @@ html, body {
   overflow: hidden;
   background-color: #1F1F1F;
   color: white;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-
 }
