--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,9 +8,11 @@
     height: 100vh;
     background-color: #1F1F1F;
     color: white;
-    padding-left: 37px;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
+  }
+  .home-container{
+    padding-left: 37px;
   }
 
   .home-centered h1 {
