--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <div class="home">
   <div class="home-centered">
-    <div>
+    <div class="home-container">
       <h1>Find Your Gig Buddy Today</h1>
       <% if current_user %>
         <%= link_to "Get Started", swiper_index_path, class: "home-btn home-btn-primary home-btn-get-started d-block", id: "home-getstartedbtn" %>
