--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "<" :back %>
+<%= link_to "<", :back %>
 <div class="container d-flex justify-content-center align-items-center vh-100"
      data-controller="artists">
   <div id="selected-artists-card" class="artists-card custom-card" data-target="artists.selectedArtistsCard">
