--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="custom-navbar">
   <%= link_to swiper_index_path, class: "nav-item" do %>
-    <i class="fa-solid fa-house"></i>
+    <i class="fa-regular fa-hand"></i>
   <% end %>
   <%= link_to matches_path, class: "nav-item" do %>
     <i class="fa-regular fa-envelope"></i>
