--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.css" rel="stylesheet">
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <%# <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> %>
-
+    <%# Favicon %>
+    <%= favicon_link_tag 'Logo.png' %>
   </head>
 
   <body>
 
-    <% unless params[:controller] == "pages" && params[:action] == "home" || params[:controller] == "matches" && params[:action] == "show" || params[:controller] == "devise/sessions" || params[:controller] == "devise/registrations" || params[:controller] == "profiles" %>
+    <% unless params[:controller] == "pages" && params[:action] == "home" || params[:controller] == "matches" && params[:action] == "show" || params[:controller] == "devise/sessions" || params[:controller] == "devise/registrations" || params[:controller] == "profiles" && params[:action] == "new"%>
 
       <%= render "shared/navbar" %>
     <% end %>
