--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-
+<div class="logo">
+  <%= image_tag "Logo.png", size: '75x54'%>
+</div>
 <div class="home">
   <div class="home-centered">
     <div class="home-container">
