--- a/app/views/swiper/index.html.erb
+++ b/app/views/swiper/index.html.erb
@@ -1,4 +1,6 @@
-
+<div class="logo">
+<%= image_tag "Logo.png", size: '75x54'%>
+</div>
 
 <div class="swiper-container" data-controller="swiper">
   <div class="swiper-wrapper">
