--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,8 +1,7 @@
 
-<%= link_to "Back", matches_path %>
 <div class="header">
   <div class="back">
-    <%= link_to swiper_index_path do %>
+    <%= link_to matches_path do %>
       <i class="fa-solid fa-chevron-left"></i>
     <% end %>
   </div>
