fixes artists display

--- a/app/assets/stylesheets/pages/_artists.scss
+++ b/app/assets/stylesheets/pages/_artists.scss
@@ -4,6 +4,7 @@
   border: 0;
   color: white;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .artist-image {
@@ -24,6 +25,7 @@
 
 .card-body {
   padding: 0 !important;
+  text-decoration: none;
 }
 
 .card-title {
