--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,35 +1,35 @@
-<%= link_to :back do %>
+<%= link_to profile_path(@profile) do %>
   <i class="fa-solid fa-chevron-left"></i>
 <% end %>
-<div class="container d-flex justify-content-center align-items-center vh-100"
-     data-controller="artists">
-  <div id="selected-artists-card" class="artists-card custom-card" data-target="artists.selectedArtistsCard">
-    <div class="card-body d-flex flex-column justify-content-center text-center">
-      <!-- Selected artists card content goes here -->
-      <h2>My Artists</h2>
-      <ul>
-        <% if @selected_artists.present? %>
-          <% @selected_artists.each do |artist| %>
-            <%= image_tag artist.images.first['url'], class: "img-fluid rounded-circle" %>
-            <li><%= artist.name %></li>
-          <% end %>
-        <% else %>
-        <% end %>
-      </ul>
-      <!-- Add button to toggle to search card -->
-      <button class="btn btn-link" data-action="click->artists#toggleSearchCard">
-        <i class="fas fa-plus"></i> Search for more artists
-      </button>
-    </div>
-  </div>
-  <div id="search-card" class="artists-card custom-card d-none" data-target="artists.searchCard">
+
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div id="selected-artists-card" class="artists-card custom-card">
     <div class="card-body d-flex flex-column justify-content-center">
+      <!-- Selected artists card content goes here -->
+      <h2>Add Artists</h2>
+      <%# <ul> %>
+        <%# <% if @selected_artists.present? %>
+          <%# <% @selected_artists.each do |artist| %>
+            <%# <%= image_tag artist.images.first['url'], class: "img-fluid rounded-circle" %>
+            <%# <li><%= artist.name</li> %>
+          <%# <% end %>
+        <%# <% else %>
+        <%# <% end %>
+      <%# </ul> %>
+      <!-- Add button to toggle to search card -->
+      <%# <button class="btn btn-link" data-action="click->artists#toggleSearchCard"> %>
+        <%# <i class="fas fa-plus"></i> Search for more artists %>
+      <%# </button> %>
+    <%# </div> %>
+  <%# </div> %>
+  <%# <div id="search-card" class="artists-card custom-card"> %>
+    <%# <div class="card-body d-flex flex-column justify-content-center"> %>
       <!-- Search card content goes here -->
       <%= form_tag artists_path, method: :get, class: "input-group mb-3 search-bar", id: "search-form" do %>
         <div class="input-group-prepend">
           <span class="input-group-text search-icon" onclick="submitForm()"><i class="fas fa-search"></i></span>
         </div>
-        <%= text_field_tag :search, "", class: "form-control", placeholder: "Search for artists" %>
+        <%= text_field_tag :search, "", class: "form-control", placeholder: "Search for artists you like" %>
       <% end %>
       <% if @artists.present? %>
         <div class="artists-card mt-3">
@@ -59,9 +59,9 @@
         </div>
       <% end %>
       <!-- Add button to toggle back to selected artists card -->
-      <button class="btn btn-link" data-action="click->artists#toggleSelectedArtistsCard">
-        Back to selected artists
-      </button>
+      <%# <button class="btn btn-link" data-action="click->artists#toggleSelectedArtistsCard"> %>
+        <%# Back to selected artists %>
+      <%# </button> %>
     </div>
   </div>
 </div>
