--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -29,28 +29,33 @@
         <h3>@<%= @profile.name %></h3>
         <p class="pronouns"><%= @profile.pronouns %></p>
         <p class="birthday location"><i class="fa-solid fa-location-dot"></i><%= @profile.location %> &nbsp; &nbsp; <i class="fa-solid fa-cake-candles"></i> <%= @profile.age %></p>
-        <div class="line"></div>
+        <div class="profile-line"></div>
         <% if @profile.bio.present? %>
           <p><%= @profile.bio %></p>
         <% else %>
           <p class="bio">This user hasn't provided a bio yet.</p> <!-- Default bio -->
         <% end %>
-        <div class="line"></div>
+        <div class="profile-line"></div>
           <div class="centered-links">
             <%= link_to artists_path, class: "centered-link" do %>
               My Artists
               <i class="fa-solid fa-pencil"></i>
             <% end %>
           </div>
-        <div class="artists-container"></div>
-        <div class="line"></div>
+        <div class="artists-container">
+        <% @profile.selected_artists.each do |artist| %>
+          <%= artist.artist.name %>
+        <% end %>
+        </div>
+        <div class="profile-line"></div>
         <div class="centered-links languages">
         Languages:
         <% @profile.languages.each do |language| %>
           <%= language.language %>
         <% end %>
         </div>
-        <div class="line"></div>
+
+        <div class="profile-line"></div>
         <div class="centered-links logout">
 
               <% if policy(@profile).edit? %>
