Minor changes to the fixes

--- a/app/assets/stylesheets/pages/_artists.scss
+++ b/app/assets/stylesheets/pages/_artists.scss
@@ -5,7 +5,12 @@
   color: white;
   font-weight: bold;
   text-decoration: none;
+  a {
+    color: white;
+    text-decoration: none;
+  }
 }
+
 
 .artist-image {
   width: 48px;
