--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <% if current_user != @profile.user %>
-  <div class="profile-back-button">
+  <div class="back-button">
     <%= link_to :back do %>
       <i class="fa-solid fa-arrow-left"></i>
     <% end %>
