--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -77,7 +77,7 @@
     color: white;
   }
 
-  .profile-back-button {
+  .back-button {
     position: absolute;
     top: 20px; /* Adjust top position as needed */
     left: 20px; /* Adjust right position as needed */
